Bug 386713 - Hidden vector layers appear in exported png images (krita 4.0.0-prealpha.2 appimage)
Summary: Hidden vector layers appear in exported png images (krita 4.0.0-prealpha.2 ap...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Layer Stack (other bugs)
Version First Reported In: 4.0 pre-alpha
Platform: Appimage Linux
: NOR normal
Target Milestone: ---
Assignee: Dmitry Kazakov
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-11-10 13:36 UTC by mvowada
Modified: 2018-01-16 12:01 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed In:
Sentry Crash Report:


Attachments
Video example (1.21 MB, video/mp4)
2017-11-10 13:36 UTC, mvowada
Details

Note You need to log in before you can comment on or make changes to this bug.
Description mvowada 2017-11-10 13:36:39 UTC
Created attachment 108777 [details]
Video example

(Tested with krita 4.0.0-prealpha.2 appimage on Ubuntu 14.04)

Hidden vector layers show up in exported png images.
Steps to reproduce:

3. create a vector layer and draw a shape, text or path in it
4. hide the vector layer
5. export as png image

Actual results: vector layer is visible on the exported png image.
Expected results: hidden vector layers should not appear in exported PNGs.
Comment 1 Dmitry Kazakov 2018-01-16 11:53:06 UTC
Git commit 245a9c61b0d5a53089390dc3deae70c5205d84c0 by Dmitry Kazakov.
Committed on 16/01/2018 at 11:52.
Pushed by dkazakov into branch 'master'.

Remove explicit setting of the cloned shape layer as visible

It was a workaround for an old bug, and the bug is not reproducible
anymore. The updates are calculated correctly when enabling the
visiblity of the layer again.

M  +0    -3    libs/ui/flake/kis_shape_layer.cc

https://commits.kde.org/krita/245a9c61b0d5a53089390dc3deae70c5205d84c0
Comment 2 mvowada 2018-01-16 12:01:46 UTC
Thanks Dmitry! :)