Remove explicit setting of the cloned shape layer as visible

It was a workaround for an old bug, and the bug is not reproducible
anymore. The updates are calculated correctly when enabling the
visiblity of the layer again.

BUG:386713